[FIX] web, project: list renderer alignment top
Prior to this commit some td in the list renderer were vertically align
on the middle while other are aligned on top. This comes from commit[1]

This commit removes the vertical-align: middle to rely on the inherited
alignment from the `<td>` which is inherited until the `<table>` el
which set the alignment on `top`.

To visually center the icons previously centered by vertical-align,
a new variable: `$o-line-size` is created.

This variable accounts for the total size of a line which is the font
size multiplied by the line height.

In our case this ensure that the icons line height in the list view is
the same as the <td> that are containing text.

[1]: odoo/odoo@53f605399755f9355554c2582ea0f693c8f947b4

task-3557566

X-original-commit: cce036d03ccd7c12f34ed930b8964e26464732ba

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -78,7 +78,10 @@
 
                 display: table-cell;
                 @include text-truncate();
-                vertical-align: middle;
+
+                .o_field_priority .fa, .o_field_list_activity .fa {
+                    line-height: $o-line-size;
+                }
 
                 &.o_list_text {
                     white-space: pre-wrap;
